src/test/deca/context/invalid/test_error_3.71-2.deca
// Description:
//    Soulève l'erreur (3.71)
//
// Resultats:
//    Erreur contextuelle
//    Ligne 15 : Class expected behind "." (règle 3.71)
//
// Historique:
//      cree le 23/01/2022


{
	int a;
    int b;
    b = a.x();
}
